[gd_scene load_steps=9 format=3 uid="uid://djajmsmv8u1yw"]

[ext_resource type="Script" path="res://src/npc.gd" id="1_hjtfi"]
[ext_resource type="Texture2D" uid="uid://bbmplpc5jrjkw" path="res://assets/villager_char_spritesheet.png" id="1_yxyqs"]
[ext_resource type="Texture2D" uid="uid://ebd5bx1fynfj" path="res://assets/emote22.png" id="3_hfyks"]
[ext_resource type="Texture2D" uid="uid://cv2rcdqdkfujq" path="res://assets/emote25.png" id="4_15xc2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tju85"]
radius = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u3c5h"]
size = Vector2(12, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_u66n6"]
atlas = ExtResource("1_yxyqs")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1b3ut"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u66n6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Npc" type="AnimatableBody2D"]
script = ExtResource("1_hjtfi")

[node name="PlayerDetectionArea" type="Area2D" parent="."]
position = Vector2(0, 8)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource("CircleShape2D_tju85")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.08165e-12, 4.5)
shape = SubResource("RectangleShape2D_u3c5h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1b3ut")
animation = &"idle"

[node name="ExclamationSprite" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(0, -15)
texture = ExtResource("3_hfyks")

[node name="InterogationSprite" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(0, -15)
texture = ExtResource("4_15xc2")
